--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <h1 class="head">NY's Tic-Tac-Toe</h1>
+    <h1 class="head">Tic-Tac-Toe</h1>
 
     <div class="board" id="board">
         <div class="cell" data-cell></div>
@@ -28,6 +28,8 @@
         <div data-winning-message-text class="win-msg"></div>
         <button id="restartButton">Restart</button>
     </div>
+
+    <h1><a class="link" href="https://instagram.com/codes.n_y">codes.n_y<sup>&copy</sup></a></h1>
 
     <script src="./app.js" defer></script>
 </body>
